test/types/single/sungeun/single-cannot-coerce.good
single-cannot-coerce.chpl:3: error: cannot initialize 'single int(64)' from 'single real(64)' because 'real(64)' is not coercible to 'int(64)'
note: An additional error is hidden. Use --print-additional-errors to see it.
