test/types/single/sungeun/single-cannot-coerce.chpl

var r : single real = 100;
var i : single int = r;
